Change these to ‘pre-wrap’ to avoid clipping in the TDC output

--- a/src/tibet/tools/sherpa/styles/sherpa_pp.css
+++ b/src/tibet/tools/sherpa/styles/sherpa_pp.css
@@ -66,7 +66,7 @@
 .sherpa_pp.Node,
 .sherpa_pp.TP_core_Node {
 
-    white-space: pre;
+    white-space: pre-wrap;
     font-family: "Lucida Sans Typewriter", "Courier New", "Courier", monospace;
 
     line-height: 1.5em;
@@ -74,7 +74,7 @@
 
 .sherpa_pp.TP_core_JSONContent span {
 
-    white-space: pre;
+    white-space: pre-wrap;
     font-family: "Lucida Sans Typewriter", "Courier New", "Courier", monospace;
 
     line-height: 1.5em;
@@ -84,7 +84,7 @@
 
     display: table;
 
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .sherpa_pp.TP_boot_Log > span {
